--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 
     <!-- Importação do css global e o de estilo da pag-->
     <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="styless.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
