--- a/pages/Cachorro/index.html
+++ b/pages/Cachorro/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../global.css">
     <link rel="stylesheet" href="styles.css">
 </head>
+<h1>Cachorro</h1>
 
 <body>
 </body>
