--- a/home.html
+++ b/home.html
@@ -17,12 +17,11 @@
                     <img src="https://cdn.onlinewebfonts.com/svg/img_233292.png" alt="Imagem da logomarca">
                 </a>
                 <h1>Informativo Pet</h1>
-                <p>Informação para os seus amiguinhos</p>
             </div>
             <div id="descricao">
                 <p>
                     <p>
-                        Esta site é para você que também ama animais.Gostaria de saber mais sobre eles?
+                        Esta site é para você que também ama animais. Gostaria de saber mais sobre eles?
                     </p>
                     <p>
                         Aqui você encontra informações sobre animais, suas descrições, perfis e qualquer tipo de informação relevante sobre ele. Caso você tenha algo a acrescentar temos um espaço para a adição de animais e suas características.
@@ -33,7 +32,7 @@
                 </p>
 
                 <button onclick="onOff()">+ Adicionar Pet</button>
-                <a href="/list.hmtl" class="button">Ver Pets</a>
+                <a href="/list.hmtl" id="button">Ver Pets</a>
             </div>
         </div>
         <div id="pets">
@@ -55,42 +54,6 @@
                 </div>
             </div>
         </div>
-        <div id="modal" class="hide">
-            <div class="content">
-                <h1>Novo Pet</h1>
-                <form action="/" method="POST" onsubmit="return checkFields(event)">
-                    <div class="input-wrapper">
-                        <label for="title">Nome do animal</label>
-                        <input type="text" name="title">
-                    </div>
-
-                    <div class="input-wrapper">
-                        <label for="category">Categoria</label>
-                        <input type="text" name="category">
-                    </div>
-
-                    <div class="input-wrapper">
-                        <label for="image">Link da foto do animal</label>
-                        <input type="url" name="image">
-                    </div>
-
-                    <div class="input-wrapper">
-                        <label for="description">Digite a descrição do animal</label>
-                        <textarea name="description" cols="30" rows="10"></textarea>
-                    </div>
-
-                    <div class="input-wrapper">
-                        <label for="link">Link do vídeo</label>
-                        <input type="url" name="link">
-                    </div>
-
-                    <a href="#" onclick="onOff()">Voltar</a>
-                    <button>Salvar</button>
-                </form>
-            </div>
-
-        </div>
-        <script src="/script.js"></script>
     </div>
     <footer>
         <p id="footer">Com ❤ aos pets </p>
