--- a/home.html
+++ b/home.html
@@ -7,6 +7,10 @@
     <!-- Importação do css global e o de estilo da pag-->
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="styles.css">
+
+    <!--Import js-->
+    <script src="script.js"></script>
+
 </head>
 
 <body>
@@ -20,23 +24,18 @@
             </div>
             <div id="descricao">
                 <p>
-                    <p>
-                        Esta site é para você que também ama animais. Gostaria de saber mais sobre eles?
-                    </p>
-                    <p>
-                        Aqui você encontra informações sobre animais, suas descrições, perfis e qualquer tipo de informação relevante sobre ele. Caso você tenha algo a acrescentar temos um espaço para a adição de animais e suas características.
-                    </p>
-                    <p>
-                        Comece clicando em algum animal de seu interesse para ver descrições mais detalhadas do mesmo e caso queira contribui clique em adicione um pet.
-                    </p>
+                    Esta site é para você que também ama animais. Gostaria de saber mais sobre eles?</br>
+
+                    Aqui você encontra informações sobre animais, suas descrições, perfis e qualquer tipo de informação relevante sobre ele. Caso você tenha algo a acrescentar temos um espaço para a adição de animais e suas características.
+                    </br>
+                    </br>
+                    Comece clicando em algum animal de seu interesse para ver descrições mais detalhadas do mesmo e caso queira contribui clique em adicione um pet.
+                    </br>
                 </p>
 
                 <button onclick="onOff()">+ Adicionar Pet</button>
-                <a href="/list.hmtl" id="button">Ver Pets</a>
+                <a href="./pages/list.html" id="button">Ver Pets</a>
             </div>
-            <footer>
-                <p id="footer">Com ❤ aos pets </p>
-            </footer>
         </div>
         <div id="pets">
             <div id="card-main">
@@ -57,7 +56,50 @@
                 </div>
             </div>
         </div>
-        
-    </div>  
+
+    </div>
+
+    <!--Modal referente ao formulario-->
+
+    <div id="modal" class="hide">
+        <div class="content">
+            <h1>Novo Pet</h1>
+            <form action="/" method="POST" onsubmit="return checkFields(event)">
+                <div class="input-wrapper">
+                    <label for="title">Nome do animal</label>
+                    <input type="text" name="title">
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="category">Categoria</label>
+                    <input type="text" name="category">
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="image">Link da foto do animal</label>
+                    <input type="url" name="image">
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="description">Digite a descrição do animal</label>
+                    <textarea name="description" cols="30" rows="10"></textarea>
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="link">Link do vídeo</label>
+                    <input type="url" name="link">
+                </div>
+
+                <a href="#" onclick="onOff()">Voltar</a>
+                <button>Salvar</button>
+            </form>
+        </div>
+
+    </div>
+
 </body>
+<footer>
+    <p id="footer">Com ❤ aos pets </p>
+</footer>
+
 </html>
