--- a/home.html
+++ b/home.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-
+    <title>Informativo Pet</title>
     <!-- Importação do css global e o de estilo da pag-->
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="modal.css">
 
     <!--Import js-->
     <script src="script.js"></script>
@@ -18,7 +19,7 @@
         <div id="intro">
             <div id="titulo">
                 <a href="/">
-                    <img src="https://cdn.onlinewebfonts.com/svg/img_233292.png" alt="Imagem da logomarca">
+                    <img src="https://image.flaticon.com/icons/svg/2865/2865574.svg" alt="Imagem da logomarca">
                 </a>
                 <h1>Informativo Pet</h1>
             </div>
@@ -43,7 +44,7 @@
                 <div id="descricao-card">
                     <h2>Cachorro</h2>
                     <p>O cão (nome científico: Canis lupus familiaris), no Brasil também chamado de cachorro, é um mamífero carnívoro da família dos canídeos, subespécie do lobo, e talvez o mais antigo animal domesticado pelo ser humano.</p>
-                    <a href="./pages/Cachorro/"> Ver mais</a>
+                    <a href="./pages/cachorro.html"> Ver mais</a>
                 </div>
             </div>
 
@@ -52,7 +53,7 @@
                 <div id="descricao-card">
                     <h2>Gato</h2>
                     <p>O gato (Felis silvestris catus) é um mamífero carnívoro da família dos felídeos, muito popular como animal de estimação. Ocupando o topo da cadeia alimentar, é predador natural de diversos animais.</p>
-                    <a href="./pages/Cat/"> Ver mais</a>
+                    <a href="./pages/gato.html"> Ver mais</a>
                 </div>
             </div>
         </div>
@@ -66,18 +67,34 @@
             <h1>Novo Pet</h1>
             <form action="/" method="POST" onsubmit="return checkFields(event)">
                 <div class="input-wrapper">
-                    <label for="title">Nome do animal</label>
-                    <input type="text" name="title">
+                    <label for="especie">Espécie</label>
+                    <input type="text" name="especie">
                 </div>
 
                 <div class="input-wrapper">
-                    <label for="category">Categoria</label>
-                    <input type="text" name="category">
+                    <label for="origem">Origem</label>
+                    <input type="text" name="origem">
                 </div>
 
                 <div class="input-wrapper">
-                    <label for="image">Link da foto do animal</label>
-                    <input type="url" name="image">
+                    <label for="porte">Porte</label>
+                    <input type="text" name="porte" list="porte">
+                </div>
+
+
+                <div class="input-wrapper">
+                    <label for="espectativaVida">Espectatia vida</label>
+                    <input type="text" name="espectativaVida">
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="linkImage">Link da foto do animal</label>
+                    <input type="url" name="linkImage">
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="linkVideo">Link do vídeo</label>
+                    <input type="url" name="linkVideo">
                 </div>
 
                 <div class="input-wrapper">
@@ -85,13 +102,8 @@
                     <textarea name="description" cols="30" rows="10"></textarea>
                 </div>
 
-                <div class="input-wrapper">
-                    <label for="link">Link do vídeo</label>
-                    <input type="url" name="link">
-                </div>
-
                 <a href="#" onclick="onOff()">Voltar</a>
-                <button>Salvar</button>
+                <a href="#" class="buttonModal">Salvar</a>
             </form>
         </div>
 
@@ -103,3 +115,9 @@
 </footer>
 
 </html>
+
+<datalist id="porte">
+    <option value="Pequeno">
+    <option value="Médio">
+    <option value="Grande">
+  </datalist>
