Teste dos cards

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
         <div id="intro">
             <div id="titulo">
                 <a href="/">
-                    <img src="https://image.flaticon.com/icons/svg/2865/2865574.svg" alt="Imagem da logomarca">
+                    <img src="./src/logo_preta.svg" alt="Imagem da logomarca">
                 </a>
                 <h1>Informativo Pet</h1>
             </div>
@@ -110,9 +110,7 @@
     </div>
 
 </body>
-<footer>
-    <p id="footer">Com ❤ aos pets </p>
-</footer>
+
 
 </html>
 
