--- a/pages/gato.html
+++ b/pages/gato.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img class="logo" src="https://image.flaticon.com/icons/svg/2865/2865574.svg" alt="Imagem da logomarca">
+        <img class="logo" src="../src/logo_branca.svg" alt="Imagem da logomarca">
         <nav>
             <ul class="nav_links">
                 <li><a href="../home.html">Home</a></li>
@@ -21,6 +21,112 @@
             </ul>
         </nav>
     </header>
+
+    <div class="cards_main">
+        <div class="card">
+            <div class="card_imagem">
+                <img src=https://i.pinimg.com/564x/d8/65/0b/d8650bbfadd92eec9501763b4170373e.jpg alt="gato">
+            </div>
+            <div class="card_texto">
+                <h2>Muchkin</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
+            </div>
+            <div class="card_status">
+                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card_imagem">
+                <img src=https://i.pinimg.com/564x/d8/65/0b/d8650bbfadd92eec9501763b4170373e.jpg alt="gato">
+            </div>
+            <div class="card_texto">
+                <h2>Muchkin</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
+            </div>
+            <div class="card_status">
+                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card_imagem">
+                <img src=https://i.pinimg.com/564x/d8/65/0b/d8650bbfadd92eec9501763b4170373e.jpg alt="gato">
+            </div>
+            <div class="card_texto">
+                <h2>Muchkin</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
+            </div>
+            <div class="card_status">
+                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card_imagem">
+                <img src=https://i.pinimg.com/564x/d8/65/0b/d8650bbfadd92eec9501763b4170373e.jpg alt="gato">
+            </div>
+            <div class="card_texto">
+                <h2>Muchkin</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
+            </div>
+            <div class="card_status">
+                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card_imagem">
+                <img src=https://i.pinimg.com/564x/d8/65/0b/d8650bbfadd92eec9501763b4170373e.jpg alt="gato">
+            </div>
+            <div class="card_texto">
+                <h2>Muchkin</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
+            </div>
+            <div class="card_status">
+                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card_imagem">
+                <img src=https://i.pinimg.com/564x/d8/65/0b/d8650bbfadd92eec9501763b4170373e.jpg alt="gato">
+            </div>
+            <div class="card_texto">
+                <h2>Muchkin</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
+            </div>
+            <div class="card_status">
+                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card_imagem">
+                <img src=https://i.pinimg.com/564x/d8/65/0b/d8650bbfadd92eec9501763b4170373e.jpg alt="gato">
+            </div>
+            <div class="card_texto">
+                <h2>Muchkin</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
+            </div>
+            <div class="card_status">
+                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card_imagem">
+                <img src=https://i.pinimg.com/564x/d8/65/0b/d8650bbfadd92eec9501763b4170373e.jpg alt="gato">
+            </div>
+            <div class="card_texto">
+                <h2>Muchkin</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
+            </div>
+            <div class="card_status">
+                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
