Adição de um section title,css da title e alteração de informações

--- a/pages/gato.html
+++ b/pages/gato.html
@@ -15,12 +15,18 @@
         <nav>
             <ul class="nav_links">
                 <li><a href="../home.html">Home</a></li>
+                <li><a href="./list.html">Pets</a></li>
                 <li><a href="./gato.html">Gatos</a></li>
                 <li><a href="./cachorro.html">Cachorro</a></li>
                 <li><a href="./Sobre/">Sobre</a></li>
             </ul>
         </nav>
     </header>
+
+    <section id="title">
+        <p>Em exibição</p>
+        <h1>Gatos</h1>
+    </section>
 
     <div class="cards_main">
         <div class="card">
