--- a/pages/Sobre/index.html
+++ b/pages/Sobre/index.html
@@ -21,6 +21,28 @@
 </header>
 
 <body>
+    <div id="main">
+        <div id="intro">
+            <div id="titulo">
+                <a href="/">
+                    <img src="./src/logo_preta.svg" alt="Imagem da logomarca">
+                </a>
+                <h1>Informativo Pet</h1>
+            </div>
+            <div id="descricao">
+                <p>
+                    Esta site é para você que também ama animais. Gostaria de saber mais sobre eles?</br>
+
+                    Aqui você encontra informações sobre animais, suas descrições, perfis e qualquer tipo de informação relevante sobre ele. Caso você tenha algo a acrescentar temos um espaço para a adição de animais e suas características.
+                    </br>
+                    </br>
+                    Comece clicando em algum animal de seu interesse para ver descrições mais detalhadas do mesmo e caso queira contribui clique em adicione um pet.
+                    </br>
+                </p>
+
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
