--- a/pages/cachorro.html
+++ b/pages/cachorro.html
@@ -18,15 +18,10 @@
                 <li><a href="./list.html">Pets</a></li>
                 <li><a href="./gato.html">Gatos</a></li>
                 <li><a href="./cachorro.html">Cachorro</a></li>
-                <li><a href="./Sobre/">Sobre</a></li>
+                <li><a href="./Sobre/index.html">Sobre</a></li>
             </ul>
         </nav>
     </header>
-
-    <section id="title">
-        <p>Em exibição</p>
-        <h1>Cachorros</h1>
-    </section>
 
     <div class="cards_main">
         <div class="card">
