--- a/pages/list.html
+++ b/pages/list.html
@@ -19,15 +19,10 @@
             <ul class="nav_links">
                 <li><a href="../home.html">Home</a></li>
                 <li><a class='button' href="#" onclick='onOff()'>Novo Pet</a></li>
-                <li><a href="./Sobre/">Sobre</a></li>
+                <li><a href="./Sobre/index.html">Sobre</a></li>
             </ul>
         </nav>
     </header>
-
-    <section id="title">
-        <p>Em exibição</p>
-        <h1>Pets</h1>
-    </section>
 
     <div class="cards_main">
         <div class="card">
