--- a/pages/cachorro.html
+++ b/pages/cachorro.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img class="logo" src="https://image.flaticon.com/icons/svg/2865/2865574.svg" alt="Imagem da logomarca">
+        <img class="logo" src="../src/logo_branca.svg" alt="Imagem da logomarca">
         <nav>
             <ul class="nav_links">
                 <li><a href="../home.html">Home</a></li>
@@ -120,7 +120,7 @@
                 <a href="https://www.youtube.com/watch?v=1quADrgpq6U" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
             </div>
         </div>
-        
+
     </div>
 </body>
 
