--- a/pages/Sobre/index.html
+++ b/pages/Sobre/index.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <header>
-    <img class="logo" src="https://image.flaticon.com/icons/svg/2865/2865574.svg" alt="Imagem da logomarca">
+    <img class="logo" src="../../src/logo_branca.svg" alt="Imagem da logomarca">
     <nav>
         <ul class="nav_links">
             <li><a href="../../home.html">Home</a></li>
+            <li><a href="../list.html">Pets</a></li>
             <li><a href="../gato.html">Gatos</a></li>
             <li><a href="../cachorro.html">Cachorro</a></li>
-            <li><a href="./index.html">Sobre</a></li>
+            <li><a href="../Sobre/index.html">Sobre</a></li>
         </ul>
     </nav>
 </header>
