--- a/pages/list.html
+++ b/pages/list.html
@@ -6,7 +6,7 @@
     <title>Informativo Pet</title>
     <!-- Importação do css global e o de estilo da pag-->
     <link rel="stylesheet" href="../global.css">
-    <link rel="stylesheet" href="globalPets.css">
+    <link rel="stylesheet" href="./globalPets.css">
     <link rel="stylesheet" href="../modal.css">
     <!--Import js-->
     <script src="../script.js"></script>
