--- a/pages/Sobre/index.html
+++ b/pages/Sobre/index.html
@@ -22,27 +22,38 @@
 
 <body>
     <div id="main">
-        <div id="intro">
-            <div id="titulo">
-                <a href="/">
-                    <img src="./src/logo_preta.svg" alt="Imagem da logomarca">
-                </a>
-                <h1>Informativo Pet</h1>
-            </div>
-            <div id="descricao">
+
+    <h1>A beleza e a harmonia da natureza </br>
+        dependem dos animais que lá vivem.</h1>
+
+    <div id="quemSomos">
+        <div id="quemSomosImg">
+            <a href="/">
+                <img src="../../src/queSomos.svg" alt="Imagem da logomarca">
+            </a>
+            <h1>Quem somos</h1>
+        </div>
+        <div id="descricao">
                 <p>
-                    Esta site é para você que também ama animais. Gostaria de saber mais sobre eles?</br>
-
-                    Aqui você encontra informações sobre animais, suas descrições, perfis e qualquer tipo de informação relevante sobre ele. Caso você tenha algo a acrescentar temos um espaço para a adição de animais e suas características.
-                    </br>
-                    </br>
-                    Comece clicando em algum animal de seu interesse para ver descrições mais detalhadas do mesmo e caso queira contribui clique em adicione um pet.
-                    </br>
+                    Somos dois graduandos de Sistemas de Informação da Universidade Federal de Rio Grande(FURG) e amantes dos animais, sem distinção de raças ou espécies.
                 </p>
-
-            </div>
         </div>
     </div>
+
+    <div id="objetivos">
+        <div id="objetivosImg">
+            <a href="/">
+                <img src="../../src/objetivos.svg" alt="Imagem da logomarca">
+            </a>
+            <h1>Objetivos</h1>
+        </div>
+        <div id="descricao">
+            <p>
+                Praticar o que estudamos na disciplina de Sistemas para Internet II, lecionada pela professora Diana Adamatti. Juntando o aprendizando com uma plataforma que agregue informações para qualquer pessoa que também ame os animais e que busque infomrações sobre.
+            </p>
+        </div>
+    </div>
+
 </body>
 
 </html>
