--- a/pages/Sobre/index.html
+++ b/pages/Sobre/index.html
@@ -24,36 +24,39 @@
 <body>
     <div id="main">
 
-    <h1>A beleza e a harmonia da natureza </br>
-        dependem dos animais que lá vivem.</h1>
+        <h1>A beleza e a harmonia da natureza </br>
+            dependem dos animais que lá vivem.</h1>
 
-    <div id="quemSomos">
-        <div id="quemSomosImg">
-            <a href="/">
-                <img src="../../src/queSomos.svg" alt="Imagem da logomarca">
-            </a>
-            <h1>Quem somos</h1>
-        </div>
-        <div id="descricao">
-                <p>
-                    Somos dois graduandos de Sistemas de Informação da Universidade Federal de Rio Grande(FURG) e amantes dos animais, sem distinção de raças ou espécies.
-                </p>
-        </div>
-    </div>
+        <div id="main_sobre">
+            <div id="sobre">
+                <div id="img">
+                    <a href="/">
+                        <img src="../../src/queSomos.svg" alt="Imagem da logomarca">
+                    </a>
+                    <h2>Quem somos</h2>
+                </div>
+                <div id="descricao">
+                    <p>
+                        Somos dois graduandos de Sistemas de Informação da Universidade Federal de Rio Grande(FURG) e amantes dos animais, sem distinção de raças ou espécies.
+                    </p>
+                </div>
+            </div>
 
-    <div id="objetivos">
-        <div id="objetivosImg">
-            <a href="/">
-                <img src="../../src/objetivos.svg" alt="Imagem da logomarca">
-            </a>
-            <h1>Objetivos</h1>
+            <div id="sobre">
+                <div id="img">
+                    <a href="/">
+                        <img src="../../src/objetivos.svg" alt="Imagem da logomarca">
+                    </a>
+                    <h2>Objetivos</h2>
+                </div>
+                <div id="descricao">
+                    <p>
+                        Praticar o que estudamos na disciplina de Sistemas para Internet II, lecionada pela professora Diana Adamatti. Juntando o aprendizando com uma plataforma que agregue informações para qualquer pessoa que também ame os animais e que busque infomrações sobre.
+                    </p>
+                </div>
+            </div>
+
         </div>
-        <div id="descricao">
-            <p>
-                Praticar o que estudamos na disciplina de Sistemas para Internet II, lecionada pela professora Diana Adamatti. Juntando o aprendizando com uma plataforma que agregue informações para qualquer pessoa que também ame os animais e que busque infomrações sobre.
-            </p>
-        </div>
-    </div>
 
 </body>
 
