Inicio animaçao cards info

--- a/pages/gato.html
+++ b/pages/gato.html
@@ -35,18 +35,13 @@
             <div class="card_status">
                 <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
             </div>
-        </div>
-
-        <div class="card">
-            <div class="card_imagem">
-                <img src=https://i.pinimg.com/564x/d8/65/0b/d8650bbfadd92eec9501763b4170373e.jpg alt="gato">
-            </div>
-            <div class="card_texto">
-                <h2>Muchkin</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
-            </div>
-            <div class="card_status">
-                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+            <div class="info">
+                <ul>
+                    <li aria-hidden="true">Especie: especie</li>
+                    <li aria-hidden="true">Origem: Canada</li>
+                    <li aria-hidden="true">Porte: pequemo</li>
+                    <li aria-hidden="true">Espectativa de vida: 18 anos</li>
+                </ul>
             </div>
         </div>
 
@@ -61,18 +56,13 @@
             <div class="card_status">
                 <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
             </div>
-        </div>
-
-        <div class="card">
-            <div class="card_imagem">
-                <img src=https://i.pinimg.com/564x/d8/65/0b/d8650bbfadd92eec9501763b4170373e.jpg alt="gato">
-            </div>
-            <div class="card_texto">
-                <h2>Muchkin</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
-            </div>
-            <div class="card_status">
-                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+            <div class="info">
+                <ul>
+                    <li aria-hidden="true">Especie: especie</li>
+                    <li aria-hidden="true">Origem: Canada</li>
+                    <li aria-hidden="true">Porte: pequemo</li>
+                    <li aria-hidden="true">Espectativa de vida: 18 anos</li>
+                </ul>
             </div>
         </div>
 
@@ -87,18 +77,13 @@
             <div class="card_status">
                 <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
             </div>
-        </div>
-
-        <div class="card">
-            <div class="card_imagem">
-                <img src=https://i.pinimg.com/564x/d8/65/0b/d8650bbfadd92eec9501763b4170373e.jpg alt="gato">
-            </div>
-            <div class="card_texto">
-                <h2>Muchkin</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
-            </div>
-            <div class="card_status">
-                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+            <div class="info">
+                <ul>
+                    <li aria-hidden="true">Especie: especie</li>
+                    <li aria-hidden="true">Origem: Canada</li>
+                    <li aria-hidden="true">Porte: pequemo</li>
+                    <li aria-hidden="true">Espectativa de vida: 18 anos</li>
+                </ul>
             </div>
         </div>
 
@@ -113,6 +98,14 @@
             <div class="card_status">
                 <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
             </div>
+            <div class="info">
+                <ul>
+                    <li aria-hidden="true">Especie: especie</li>
+                    <li aria-hidden="true">Origem: Canada</li>
+                    <li aria-hidden="true">Porte: pequemo</li>
+                    <li aria-hidden="true">Espectativa de vida: 18 anos</li>
+                </ul>
+            </div>
         </div>
 
         <div class="card">
@@ -126,7 +119,79 @@
             <div class="card_status">
                 <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
             </div>
+            <div class="info">
+                <ul>
+                    <li aria-hidden="true">Especie: especie</li>
+                    <li aria-hidden="true">Origem: Canada</li>
+                    <li aria-hidden="true">Porte: pequemo</li>
+                    <li aria-hidden="true">Espectativa de vida: 18 anos</li>
+                </ul>
+            </div>
         </div>
+
+        <div class="card">
+            <div class="card_imagem">
+                <img src=https://i.pinimg.com/564x/d8/65/0b/d8650bbfadd92eec9501763b4170373e.jpg alt="gato">
+            </div>
+            <div class="card_texto">
+                <h2>Muchkin</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
+            </div>
+            <div class="card_status">
+                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+            </div>
+            <div class="info">
+                <ul>
+                    <li aria-hidden="true">Especie: especie</li>
+                    <li aria-hidden="true">Origem: Canada</li>
+                    <li aria-hidden="true">Porte: pequemo</li>
+                    <li aria-hidden="true">Espectativa de vida: 18 anos</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card_imagem">
+                <img src=https://i.pinimg.com/564x/d8/65/0b/d8650bbfadd92eec9501763b4170373e.jpg alt="gato">
+            </div>
+            <div class="card_texto">
+                <h2>Muchkin</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
+            </div>
+            <div class="card_status">
+                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+            </div>
+            <div class="info">
+                <ul>
+                    <li aria-hidden="true">Especie: especie</li>
+                    <li aria-hidden="true">Origem: Canada</li>
+                    <li aria-hidden="true">Porte: pequemo</li>
+                    <li aria-hidden="true">Espectativa de vida: 18 anos</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card_imagem">
+                <img src=https://i.pinimg.com/564x/d8/65/0b/d8650bbfadd92eec9501763b4170373e.jpg alt="gato">
+            </div>
+            <div class="card_texto">
+                <h2>Muchkin</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
+            </div>
+            <div class="card_status">
+                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+            </div>
+            <div class="info">
+                <ul>
+                    <li aria-hidden="true">Especie: especie</li>
+                    <li aria-hidden="true">Origem: Canada</li>
+                    <li aria-hidden="true">Porte: pequemo</li>
+                    <li aria-hidden="true">Espectativa de vida: 18 anos</li>
+                </ul>
+            </div>
+        </div>
+
     </div>
 </body>
 
