Alterações de gramática

--- a/pages/list.html
+++ b/pages/list.html
@@ -60,12 +60,12 @@
             <h1>Novo Pet</h1>
             <form action="/" method="POST" onsubmit="return checkFields(event)">
                 <div class="input-wrapper">
-                    <label for="especie">Espécie</label>
-                    <input type="text" name="especie">
+                    <label for="espécie">Animal</label>
+                    <input type="text" name="espécie">
                 </div>
 
                 <div class="input-wrapper">
-                    <label for="origem">Origem</label>
+                    <label for="origem">Origem do animal</label>
                     <input type="text" name="origem">
                 </div>
 
@@ -76,8 +76,8 @@
 
 
                 <div class="input-wrapper">
-                    <label for="espectativaVida">Espectatia vida</label>
-                    <input type="text" name="espectativaVida">
+                    <label for="ExpectativaVida">Expectativa de vida</label>
+                    <input type="text" name="ExpectativaVida">
                 </div>
 
                 <div class="input-wrapper">
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="input-wrapper">
-                    <label for="linkVideo">Link do vídeo</label>
+                    <label for="linkVideo">Link do vídeo do animal</label>
                     <input type="url" name="linkVideo">
                 </div>
 
