--- a/pages/gato.html
+++ b/pages/gato.html
@@ -37,10 +37,10 @@
             </div>
             <div class="info">
                 <ul>
-                    <li aria-hidden="true">Especie: especie</li>
+                    <li aria-hidden="true">Espécie: espécie</li>
                     <li aria-hidden="true">Origem: Canada</li>
                     <li aria-hidden="true">Porte: pequemo</li>
-                    <li aria-hidden="true">Espectativa de vida: 18 anos</li>
+                    <li aria-hidden="true">Expectativa de vida: 18 anos</li>
                 </ul>
             </div>
         </div>
@@ -58,10 +58,10 @@
             </div>
             <div class="info">
                 <ul>
-                    <li aria-hidden="true">Especie: especie</li>
+                    <li aria-hidden="true">Espécie: espécie</li>
                     <li aria-hidden="true">Origem: Canada</li>
-                    <li aria-hidden="true">Porte: pequemo</li>
-                    <li aria-hidden="true">Espectativa de vida: 18 anos</li>
+                    <li aria-hidden="true">Porte: pequeno</li>
+                    <li aria-hidden="true">Expectativa de vida: 18 anos</li>
                 </ul>
             </div>
         </div>
@@ -79,10 +79,10 @@
             </div>
             <div class="info">
                 <ul>
-                    <li aria-hidden="true">Especie: especie</li>
+                    <li aria-hidden="true">Espécie: espécie</li>
                     <li aria-hidden="true">Origem: Canada</li>
                     <li aria-hidden="true">Porte: pequemo</li>
-                    <li aria-hidden="true">Espectativa de vida: 18 anos</li>
+                    <li aria-hidden="true">Expectativa de vida: 18 anos</li>
                 </ul>
             </div>
         </div>
@@ -100,10 +100,10 @@
             </div>
             <div class="info">
                 <ul>
-                    <li aria-hidden="true">Especie: especie</li>
+                    <li aria-hidden="true">Espécie: espécie</li>
                     <li aria-hidden="true">Origem: Canada</li>
                     <li aria-hidden="true">Porte: pequemo</li>
-                    <li aria-hidden="true">Espectativa de vida: 18 anos</li>
+                    <li aria-hidden="true">Expectativa de vida: 18 anos</li>
                 </ul>
             </div>
         </div>
@@ -121,10 +121,10 @@
             </div>
             <div class="info">
                 <ul>
-                    <li aria-hidden="true">Especie: especie</li>
+                    <li aria-hidden="true">Espécie: espécie</li>
                     <li aria-hidden="true">Origem: Canada</li>
                     <li aria-hidden="true">Porte: pequemo</li>
-                    <li aria-hidden="true">Espectativa de vida: 18 anos</li>
+                    <li aria-hidden="true">Expectativa de vida: 18 anos</li>
                 </ul>
             </div>
         </div>
@@ -142,10 +142,10 @@
             </div>
             <div class="info">
                 <ul>
-                    <li aria-hidden="true">Especie: especie</li>
+                    <li aria-hidden="true">Espécie: espécie</li>
                     <li aria-hidden="true">Origem: Canada</li>
                     <li aria-hidden="true">Porte: pequemo</li>
-                    <li aria-hidden="true">Espectativa de vida: 18 anos</li>
+                    <li aria-hidden="true">Expectativa de vida: 18 anos</li>
                 </ul>
             </div>
         </div>
@@ -163,10 +163,10 @@
             </div>
             <div class="info">
                 <ul>
-                    <li aria-hidden="true">Especie: especie</li>
+                    <li aria-hidden="true">Espécie: espécie</li>
                     <li aria-hidden="true">Origem: Canada</li>
                     <li aria-hidden="true">Porte: pequemo</li>
-                    <li aria-hidden="true">Espectativa de vida: 18 anos</li>
+                    <li aria-hidden="true">Expectativa de vida: 18 anos</li>
                 </ul>
             </div>
         </div>
@@ -184,10 +184,10 @@
             </div>
             <div class="info">
                 <ul>
-                    <li aria-hidden="true">Especie: especie</li>
+                    <li aria-hidden="true">Espécie: espécie</li>
                     <li aria-hidden="true">Origem: Canada</li>
                     <li aria-hidden="true">Porte: pequemo</li>
-                    <li aria-hidden="true">Espectativa de vida: 18 anos</li>
+                    <li aria-hidden="true">Expectativa de vida: 18 anos</li>
                 </ul>
             </div>
         </div>
