Alterações na Sobre

--- a/pages/Sobre/index.html
+++ b/pages/Sobre/index.html
@@ -24,8 +24,8 @@
 <body>
     <div id="main">
 
-        <h1>A beleza e a harmonia da natureza </br>
-            dependem dos animais que lá vivem.</h1>
+        <h1>"A beleza e a harmonia da natureza </br>
+            dependem dos animais que lá vivem."</h1>
 
         <div id="main_sobre">
             <div id="sobre">
