--- a/pages/list.html
+++ b/pages/list.html
@@ -34,7 +34,7 @@
                 <p>Os gatos tem inúmeras habilidades e é conhecido pela sua famosa autonomia e independência. </p>
             </div>
             <div class="card_status">
-                <a href="./gato.html">Ver mais</a>
+                <a href="./gato.html"><img src="https://image.flaticon.com/icons/svg/616/616430.svg" alt="Imagem de um gato"></a>
             </div>
         </div>
 
@@ -47,7 +47,7 @@
                 <p>Fidelidade e companheirismo são algumas das características mais marcantes do cachorro, considerado o melhor amigo do homem. </p>
             </div>
             <div class="card_status">
-                <a href="./cachorro.html">Ver mais</a>
+                <a href="./cachorro.html"><img src="https://image.flaticon.com/icons/svg/616/616408.svg" alt="Imagem de um cachorro"></a>
             </div>
         </div>
 
