--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
                 <div id="descricao-card">
                     <h2>Cachorro</h2>
                     <p>O cão (nome científico: Canis lupus familiaris), no Brasil também chamado de cachorro, é um mamífero carnívoro da família dos canídeos, subespécie do lobo, e talvez o mais antigo animal domesticado pelo ser humano.</p>
-                    <a href="./pages/cachorro.html"> Ver mais</a>
+                    <a href="./pages/animais/cachorro.html"> Ver mais</a>
                 </div>
             </div>
 
@@ -53,7 +53,7 @@
                 <div id="descricao-card">
                     <h2>Gato</h2>
                     <p>O gato (Felis silvestris catus) é um mamífero carnívoro da família dos felídeos, muito popular como animal de estimação. Ocupando o topo da cadeia alimentar, é predador natural de diversos animais.</p>
-                    <a href="./pages/gato.html"> Ver mais</a>
+                    <a href="./pages/animais/gato.html"> Ver mais</a>
                 </div>
             </div>
         </div>
