--- a/pages/Sobre/index.html
+++ b/pages/Sobre/index.html
@@ -14,8 +14,8 @@
         <ul class="nav_links">
             <li><a href="../../home.html">Home</a></li>
             <li><a href="../list.html">Pets</a></li>
-            <li><a href="../gato.html">Gatos</a></li>
-            <li><a href="../cachorro.html">Cachorro</a></li>
+            <li><a href="../animais/gato.html">Gatos</a></li>
+            <li><a href="../animais/gato.html">Cachorro</a></li>
             <li><a href="../Sobre/index.html">Sobre</a></li>
         </ul>
     </nav>
