--- a/pages/list.html
+++ b/pages/list.html
@@ -6,7 +6,7 @@
     <title>Informativo Pet</title>
     <!-- Importação do css global e o de estilo da pag-->
     <link rel="stylesheet" href="../global.css">
-    <link rel="stylesheet" href="./globalPets.css">
+    <link rel="stylesheet" href="./animais/globalPets.css">
     <link rel="stylesheet" href="../modal.css">
     <!--Import js-->
     <script src="../script.js"></script>
@@ -34,7 +34,7 @@
                 <p>Os gatos tem inúmeras habilidades e é conhecido pela sua famosa autonomia e independência. </p>
             </div>
             <div class="card_status">
-                <a href="./gato.html"><img src="https://image.flaticon.com/icons/svg/616/616430.svg" alt="Imagem de um gato"></a>
+                <a href="./animais/gato.html"><img src="https://image.flaticon.com/icons/svg/616/616430.svg" alt="Imagem de um gato"></a>
             </div>
         </div>
 
@@ -47,7 +47,7 @@
                 <p>Fidelidade e companheirismo são algumas das características mais marcantes do cachorro, considerado o melhor amigo do homem. </p>
             </div>
             <div class="card_status">
-                <a href="./cachorro.html"><img src="https://image.flaticon.com/icons/svg/616/616408.svg" alt="Imagem de um cachorro"></a>
+                <a href="./animais/cachorro.html"><img src="https://image.flaticon.com/icons/svg/616/616408.svg" alt="Imagem de um cachorro"></a>
             </div>
         </div>
 
