--- a/pages/animais/cachorro.html
+++ b/pages/animais/cachorro.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <title>Informativo Pet</title>
     <!-- Importação do css global e o de estilo da pag-->
-    <link rel="stylesheet" href="../global.css">
+    <link rel="stylesheet" href="../../global.css">
     <link rel="stylesheet" href="globalPets.css">
 </head>
 
 <body>
     <header>
-        <img class="logo" src="../src/logo_branca.svg" alt="Imagem da logomarca">
+        <img class="logo" src="../../src/logo_branca.svg" alt="Imagem da logomarca">
         <nav>
             <ul class="nav_links">
-                <li><a href="../home.html">Home</a></li>
-                <li><a href="./list.html">Pets</a></li>
+                <li><a href="../../home.html">Home</a></li>
+                <li><a href="../list.html">Pets</a></li>
                 <li><a href="./gato.html">Gatos</a></li>
                 <li><a href="./cachorro.html">Cachorro</a></li>
-                <li><a href="./Sobre/index.html">Sobre</a></li>
+                <li><a href="../Sobre/index.html">Sobre</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +33,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
             </div>
             <div class="card_status">
-                <a href="https://www.youtube.com/watch?v=1quADrgpq6U" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+                <a href="https://www.youtube.com/watch?v=1quADrgpq6U" target="_blank"><img src="../../src/youtube.svg" alt="logo youtube"></a>
             </div>
             <div class="info">
                 <ul>
@@ -53,7 +53,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
             </div>
             <div class="card_status">
-                <a href="https://www.youtube.com/watch?v=1quADrgpq6U" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+                <a href="https://www.youtube.com/watch?v=1quADrgpq6U" target="_blank"><img src="../../src/youtube.svg" alt="logo youtube"></a>
             </div>
             <div class="info">
                 <ul>
@@ -73,7 +73,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
             </div>
             <div class="card_status">
-                <a href="https://www.youtube.com/watch?v=1quADrgpq6U" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+                <a href="https://www.youtube.com/watch?v=1quADrgpq6U" target="_blank"><img src="../../src/youtube.svg" alt="logo youtube"></a>
             </div>
             <div class="info">
                 <ul>
@@ -93,7 +93,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
             </div>
             <div class="card_status">
-                <a href="https://www.youtube.com/watch?v=1quADrgpq6U" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+                <a href="https://www.youtube.com/watch?v=1quADrgpq6U" target="_blank"><img src="../../src/youtube.svg" alt="logo youtube"></a>
             </div>
             <div class="info">
                 <ul>
@@ -113,7 +113,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
             </div>
             <div class="card_status">
-                <a href="https://www.youtube.com/watch?v=1quADrgpq6U" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+                <a href="https://www.youtube.com/watch?v=1quADrgpq6U" target="_blank"><img src="../../src/youtube.svg" alt="logo youtube"></a>
             </div>
         </div>
         <div class="card">
@@ -125,7 +125,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
             </div>
             <div class="card_status">
-                <a href="https://www.youtube.com/watch?v=1quADrgpq6U" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+                <a href="https://www.youtube.com/watch?v=1quADrgpq6U" target="_blank"><img src="../../src/youtube.svg" alt="logo youtube"></a>
             </div>
             <div class="info">
                 <ul>
@@ -145,7 +145,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
             </div>
             <div class="card_status">
-                <a href="https://www.youtube.com/watch?v=1quADrgpq6U" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+                <a href="https://www.youtube.com/watch?v=1quADrgpq6U" target="_blank"><img src="../../src/youtube.svg" alt="logo youtube"></a>
             </div>
         </div>
         <div class="card">
@@ -157,7 +157,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
             </div>
             <div class="card_status">
-                <a href="https://www.youtube.com/watch?v=1quADrgpq6U" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+                <a href="https://www.youtube.com/watch?v=1quADrgpq6U" target="_blank"><img src="../../src/youtube.svg" alt="logo youtube"></a>
             </div>
             <div class="info">
                 <ul>
