--- a/pages/animais/gato.html
+++ b/pages/animais/gato.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <title>Informativo Pet</title>
     <!-- Importação do css global e o de estilo da pag-->
-    <link rel="stylesheet" href="../global.css">
+    <link rel="stylesheet" href="../../global.css">
     <link rel="stylesheet" href="globalPets.css">
 </head>
 
 <body>
     <header>
-        <img class="logo" src="../src/logo_branca.svg" alt="Imagem da logomarca">
+        <img class="logo" src="../../src/logo_branca.svg" alt="Imagem da logomarca">
         <nav>
             <ul class="nav_links">
-                <li><a href="../home.html">Home</a></li>
-                <li><a href="./list.html">Pets</a></li>
+                <li><a href="../../home.html">Home</a></li>
+                <li><a href="../list.html">Pets</a></li>
                 <li><a href="./gato.html">Gatos</a></li>
                 <li><a href="./cachorro.html">Cachorro</a></li>
-                <li><a href="./Sobre/index.html">Sobre</a></li>
+                <li><a href="../Sobre/index.html">Sobre</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +33,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
             </div>
             <div class="card_status">
-                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../../src/youtube.svg" alt="logo youtube"></a>
             </div>
             <div class="info">
                 <ul>
@@ -54,7 +54,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
             </div>
             <div class="card_status">
-                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../../src/youtube.svg" alt="logo youtube"></a>
             </div>
             <div class="info">
                 <ul>
@@ -75,7 +75,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
             </div>
             <div class="card_status">
-                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../../src/youtube.svg" alt="logo youtube"></a>
             </div>
             <div class="info">
                 <ul>
@@ -96,7 +96,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
             </div>
             <div class="card_status">
-                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../../src/youtube.svg" alt="logo youtube"></a>
             </div>
             <div class="info">
                 <ul>
@@ -117,7 +117,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
             </div>
             <div class="card_status">
-                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../../src/youtube.svg" alt="logo youtube"></a>
             </div>
             <div class="info">
                 <ul>
@@ -138,7 +138,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
             </div>
             <div class="card_status">
-                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../../src/youtube.svg" alt="logo youtube"></a>
             </div>
             <div class="info">
                 <ul>
@@ -159,7 +159,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
             </div>
             <div class="card_status">
-                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../../src/youtube.svg" alt="logo youtube"></a>
             </div>
             <div class="info">
                 <ul>
@@ -180,7 +180,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
             </div>
             <div class="card_status">
-                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../src/youtube.svg" alt="logo youtube"></a>
+                <a href="https://www.youtube.com/watch?v=sw3HTQkIOus" target="_blank"><img src="../../src/youtube.svg" alt="logo youtube"></a>
             </div>
             <div class="info">
                 <ul>
