alterações de gramática

--- a/pages/Sobre/index.html
+++ b/pages/Sobre/index.html
@@ -15,7 +15,7 @@
             <li><a href="../../home.html">Home</a></li>
             <li><a href="../list.html">Pets</a></li>
             <li><a href="../animais/gato.html">Gatos</a></li>
-            <li><a href="../animais/gato.html">Cachorro</a></li>
+            <li><a href="../animais/cachorro.html">Cachorro</a></li>
             <li><a href="../Sobre/index.html">Sobre</a></li>
         </ul>
     </nav>
@@ -51,7 +51,7 @@
                 </div>
                 <div id="descricao">
                     <p>
-                        Praticar o que estudamos na disciplina de Sistemas para Internet II, lecionada pela professora Diana Adamatti. Juntando o aprendizando com uma plataforma que agregue informações para qualquer pessoa que também ame os animais e que busque infomrações sobre.
+                        Praticar o que estudamos na disciplina de Sistemas para Internet II, lecionada pela professora Diana Adamatti. Juntando o aprendizando com uma plataforma que agregue informações para qualquer pessoa que também ame os animais e que busque informações sobre.
                     </p>
                 </div>
             </div>
